Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4578

Qt Creator doesn't accept helpers (observer, qmldump) from SDK

    XMLWordPrintable

Details

    Description

      Depending on the timestamps on the filesystem, Qt Creator might not be able to pick up the helper tools we ship alongside the Qt versions in the SDK .

      The culprit is in BuildableHelperLibrary::byInstallDataHelper: Here we check whether the source code of the helpers in QtCreator share directory is older than the binaries we find already compiled. If this fails we reject the located binaries. The idea behind this was originally that the user should then recompile the debugging helpers. However, because of the missing private headers he can't do this for the qmldump version in the Qt SDK, which is why we went for shipping them in the SDK in the first place.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes