QmlDump: Ensure that qmldump is found in QtSDK

We ship a precompiled qmldump in the Qt SDK because the Qt versions
don't have private headers. However, the logic in buildablehelperlibrary
by default rejects any build that is older than the latest changes to the
qmldump source code files; allow Qt Creator to pick up the (maybe
outdated) qmldump nevertheless if no private headers are installed.

Reviewed-by: ckamm
Task-number: QTCREATORBUG-4578